feat: soportar paginacion infinita y auditorias pendientes
